# GK_Compilers_ModulesProject

./: .gitignore  MODULES_EXPLAINED.md  README.md
LAB 1/modules-template-project-main/: CMakeLists.txt
LAB 1/modules-template-project-main/build_cli/src/: cmake_install.cmake
LAB 1/modules-template-project-main/build_ppcore/: CMakeCache.txt  Makefile  cmake_install.cmake
LAB 1/modules-template-project-main/src/: CMakeLists.txt  main.c  main.h
LAB 1/modules-template-project-main/tests/: test_io.c
P1PP – C Preprocessor/: .gitignore
P1PP – C Preprocessor/modules-template-project-main/: input-example_pp.c
P1PP – C Preprocessor/modules-template-project-main/build_cli/: cmake_install.cmake
P1PP – C Preprocessor/modules-template-project-main/src/: utils_files.c
P1PP – C Preprocessor/modules-template-project-main/src/macros/: CMakeLists.txt  macros.h
P1PP – C Preprocessor/modules-template-project-main/tests/: test_pp_core.c  test_process_line.c
P2-Lexxer-Scanner/: QUICK_TEST_EXAMPLE.c  README.md
P2-Lexxer-Scanner/modules-template-project-main/: CMakeLists.txt  DFATransitionMatrix - Sheet1.csv  DFATransitionMatrix.xlsx  USER_MANUAL.md  example.cdbgcnt  example.cscn
P2-Lexxer-Scanner/modules-template-project-main/build_cli_gcc/: CMakeCache.txt
P2-Lexxer-Scanner/modules-template-project-main/src/: CMakeLists.txt  main.c  main.h  utils_files.c
P2-Lexxer-Scanner/modules-template-project-main/src/automata/: CMakeLists.txt  automata.c  automata.h
P2-Lexxer-Scanner/modules-template-project-main/src/char_stream/: CMakeLists.txt  char_stream.c  char_stream.h
P2-Lexxer-Scanner/modules-template-project-main/src/counter/: CMakeLists.txt  counter.c  counter.h
P2-Lexxer-Scanner/modules-template-project-main/src/driver/: CMakeLists.txt  driver.c  driver.h
P2-Lexxer-Scanner/modules-template-project-main/src/error/: CMakeLists.txt  error.c  error.h
P2-Lexxer-Scanner/modules-template-project-main/src/lang_spec/: CMakeLists.txt  lang_spec.c  lang_spec.h
P2-Lexxer-Scanner/modules-template-project-main/src/logger/: CMakeLists.txt  logger.c  logger.h
P2-Lexxer-Scanner/modules-template-project-main/src/out_writer/: CMakeLists.txt  out_writer.c  out_writer.h
P2-Lexxer-Scanner/modules-template-project-main/src/token/: CMakeLists.txt  token.c  token.h
P2-Lexxer-Scanner/modules-template-project-main/src/token_list/: CMakeLists.txt  token_list.c  token_list.h
P2-Lexxer-Scanner/modules-template-project-main/tests/: CMakeLists.txt  test_parallel_automata.c  test_scanner.c  test_scanner.h  test_scanner_new.c
P3 - Parsing/: README.md
P3 - Parsing/modules-template-project-main/: .gitignore  CMakeLists.txt  README.md  USER_MANUAL.md
P3 - Parsing/modules-template-project-main/data/: language1.txt  language2.txt
P3 - Parsing/modules-template-project-main/samples/: sample2.cscn  sample3.cscn  sample4.cscn
P3 - Parsing/modules-template-project-main/src/: CMakeLists.txt  main.c  main.h  utils_files.c  utils_files.h
P3 - Parsing/modules-template-project-main/src/dfa/: CMakeLists.txt  dfa.c  dfa.h
P3 - Parsing/modules-template-project-main/src/lang_spec/: CMakeLists.txt  lang_spec.c  lang_spec.h
P3 - Parsing/modules-template-project-main/src/module_2/: module_2.c  module_2.h
P3 - Parsing/modules-template-project-main/src/module_args/: module_args.c  module_args.h
P3 - Parsing/modules-template-project-main/src/out_writer/: CMakeLists.txt  out_writer.c  out_writer.h
P3 - Parsing/modules-template-project-main/src/parser_engine/: CMakeLists.txt  parser_engine.c  parser_engine.h
P3 - Parsing/modules-template-project-main/src/parser_stack/: CMakeLists.txt  parser_stack.c  parser_stack.h
P3 - Parsing/modules-template-project-main/src/sra/: CMakeLists.txt  sra.c  sra.h
P3 - Parsing/modules-template-project-main/src/token_loader/: CMakeLists.txt  token_loader.c  token_loader.h
P3 - Parsing/modules-template-project-main/tests/: CMakeLists.txt  test_dfa.c  test_dfa.h  test_lang_spec.c  test_lang_spec.h  test_module_args.h  test_parser_stack.c  test_parser_stack.h  test_sra.c  test_sra.h
modules-template-project-main/: .gitignore  2526-COMP-requirements.txt  CMakeLists.txt  COMP_P1PP_handout.txt  IMPLEMENTATION_SUMMARY.md  USER_MANUAL.md  VERIFICATION_REPORT.md  final_test.c  input-example.c  input-example.h  input-example_pp.c  input-example_pp.h  test_comprehensive.c  test_header.h  test_input_pp.c
modules-template-project-main/build_cli/: CMakeCache.txt  CTestTestfile.cmake  Makefile
modules-template-project-main/build_cli/src/: CTestTestfile.cmake  Makefile
modules-template-project-main/build_cli/tests/: CTestTestfile.cmake  cmake_install.cmake
modules-template-project-main/build_ppcore/: CTestTestfile.cmake  modules_template_main
modules-template-project-main/build_ppcore/src/: CTestTestfile.cmake
modules-template-project-main/build_ppcore/tests/: CTestTestfile.cmake  cmake_install.cmake  test_io  test_macros  test_module_args  test_pp_core
modules-template-project-main/documentation/: user_manual.md
modules-template-project-main/src/: CMakeLists.txt  main.c  main.h  utils_files.c
modules-template-project-main/src/buffer/: CMakeLists.txt  README.md  buffer.c  buffer.h
modules-template-project-main/src/cli/: CMakeLists.txt  README.md  cli.c  cli.h
modules-template-project-main/src/comments/: CMakeLists.txt  comments.c  comments.h
modules-template-project-main/src/directives/: CMakeLists.txt  directives.c  directives.h
modules-template-project-main/src/errors/: CMakeLists.txt  errors.c  errors.h
modules-template-project-main/src/io/: CMakeLists.txt  README.md  io.c  io.h
modules-template-project-main/src/macros/: macros.c  macros.h
modules-template-project-main/src/pp_core/: CMakeLists.txt  README.md  pp_context.h  pp_core.c  pp_core.h
modules-template-project-main/src/spec/: README.md  pp_spec.h
modules-template-project-main/src/tokens/: CMakeLists.txt  test_tokens  tokens.c  tokens.h
modules-template-project-main/tests/: CMakeLists.txt  test_cli.c  test_errors.c  test_io.h  test_macros.c
(+88 files in other folders)
